//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "private/v1/metadata_type.proto";
import "shared/v1/condition_status_type.proto";

// Contains the details about the virtual machine that are available only for the system.
message VirtualMachine {
  // Public data.
  string id = 1;
  Metadata metadata = 2;
  VirtualMachineSpec spec = 3;
  VirtualMachineStatus status = 4;
}

message VirtualMachineSpec {
  // Copies of the public fields.
  string template = 1;
  map<string, google.protobuf.Any> template_parameters = 2;
}

message VirtualMachineStatus {
  // Copies of the public fields.
  VirtualMachineState state = 1;
  repeated VirtualMachineCondition conditions = 2;
  string ip_address = 3;

  // Identifier of the hub that was selected for this virtual machine.
  string hub = 4;
}

enum VirtualMachineState {
  VIRTUAL_MACHINE_STATE_UNSPECIFIED = 0;
  VIRTUAL_MACHINE_STATE_PROGRESSING = 1;
  VIRTUAL_MACHINE_STATE_READY = 2;
  VIRTUAL_MACHINE_STATE_FAILED = 3;
}

message VirtualMachineCondition {
  VirtualMachineConditionType type = 1;
  shared.v1.ConditionStatus status = 2;
  google.protobuf.Timestamp last_transition_time = 3;
  optional string reason = 4;
  optional string message = 5;
}

enum VirtualMachineConditionType {
  VIRTUAL_MACHINE_CONDITION_TYPE_UNSPECIFIED = 0;
  VIRTUAL_MACHINE_CONDITION_TYPE_PROGRESSING = 1;
  VIRTUAL_MACHINE_CONDITION_TYPE_READY = 2;
  VIRTUAL_MACHINE_CONDITION_TYPE_FAILED = 3;
  VIRTUAL_MACHINE_CONDITION_TYPE_DEGRADED = 4;
}
